deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jedligram-backend-deployment
spec:
  selector:
    matchLabels:
      app: jedligram-backend
  template:
    metadata:
      labels:
        app: jedligram-backend
    spec:
      containers:
        - name: jedligram-backend
          image: ghcr.io/geher-marcell/jedligram-backend-vizsgaremek:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8000

          volumeMounts:
            - name: laravel-storage
              mountPath: /var/www/html/storage/app/public

      volumes:
        - name: laravel-storage
          persistentVolumeClaim:
            claimName: laravel-storage-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: jedligram-backend-cluster-ip-service
spec:
  selector:
    app: jedligram-backend
  type: ClusterIP
  ports:
    - protocol: TCP
      targetPort: 8000
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jedligram-backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - jedligrambackend-gehermarcell.jcloud.jedlik.cloud
      secretName: jedligram-certificate

  rules:
    - host: jedligrambackend-gehermarcell.jcloud.jedlik.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jedligram-backend-cluster-ip-service
                port:
                  number: 80
